cmake_minimum_required(VERSION 3.17)
project(leet)

set(CMAKE_CXX_STANDARD 14)

add_executable(leet main.cpp TagArray/0217ContainsDuplicate.h common/allHeaders.h TagArray/0268MissingNumber.h TagArray/0136SingleNumber.h TagArray/0448FindDisappearedNumbers.h TagTwoPointers/0001twoSum.h TagTwoPointers/0026RemoveDuplicates.h TagTwoPointers/0027RemoveElement.h)