cmake_minimum_required(VERSION 3.17)
project(leet)

set(CMAKE_CXX_STANDARD 14)

add_executable(leet main.cpp TagArray/0217ContainsDuplicate.h common/allHeaders.h TagArray/0268MissingNumber.h TagArray/0136SingleNumber.h TagArray/0448FindDisappearedNumbers.h TagTwoPointers/0001TwoSum.h TagTwoPointers/0026RemoveDuplicates.h TagTwoPointers/0027RemoveElement.h TagTwoPointers/0283MoveZeroes.h TagTwoPointers/0088MergeSortedArray.h TagArray/0169MajorityElement.h TagTwoPointers/0125ValidPalindrome.h TagArray/0118PascalsTriangle.h TagString/0028ImplementstrStr.h TagString/0058LengthOfLastWord.h TagString/0344ReverseString.h TagString/0014LongestCommonPrefix.h TagArray/0066PlusOne.h TagArray/0349IntersectionOfTwoArrays.h TagString/0387FirstUniqueCharacterInAString.h)